test: edit test code for create mission